# MinecraftConsoles

./: .gitignore  1429.patch  BUILD_UWP.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  PROGRESS_SESSION3.md  README.md
Minecraft.Client/: ArchiveFile.cpp  AuthScreen.cpp  AuthScreen.h  BufferedImage.cpp  CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ConnectScreen.cpp  ConnectScreen.h  EntityRenderDispatcher.cpp  Extrax64Stubs.cpp  Gui.cpp  HumanoidMobRenderer.cpp  LivingEntityRenderer.cpp  Minecraft.cpp  MinecraftServer.cpp  MinecraftServer.h  Model.cpp  PendingConnection.cpp  PendingConnection.h  PlayerList.cpp  PlayerRenderer.cpp  PreStitchedTextureMap.cpp  SheepFurModel.cpp  StatsCounter.cpp  crt_compat.cpp  stdafx.h  stubs.cpp
Minecraft.Client/Common/: Consoles_App.cpp  Consoles_App.h
Minecraft.Client/Common/Audio/: SoundEngine.cpp  SoundEngine.h  SoundNames.cpp
Minecraft.Client/Common/DLC/: DLCAudioFile.cpp  DLCManager.cpp
Minecraft.Client/Common/GameRules/: LevelGenerationOptions.cpp
Minecraft.Client/Common/Leaderboards/: LeaderboardManager.cpp  LeaderboardManager.h
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  GameNetworkManager.h  PlatformNetworkManagerStub.cpp  PlatformNetworkManagerStub.h  SessionInfo.h
Minecraft.Client/Common/UI/: IUIScene_CreativeMenu.cpp  IUIScene_PauseMenu.cpp  UIController.cpp  UIScene.cpp  UIScene_AbstractContainerMenu.cpp  UIScene_ConnectingProgress.cpp  UIScene_DeathMenu.cpp  UIScene_DebugOverlay.cpp  UIScene_FullscreenProgress.cpp  UIScene_HelpAndOptionsMenu.cpp  UIScene_InGameInfoMenu.cpp  UIScene_Keyboard.cpp  UIScene_Keyboard.h  UIScene_LeaderboardsMenu.cpp  UIScene_LoadOrJoinMenu.cpp  UIScene_MainMenu.cpp  UIScene_MainMenu.h  UIScene_MessageBox.cpp  UIScene_MessageBox.h  UIScene_PauseMenu.cpp  UIScene_SkinSelectMenu.cpp  UIStructs.h
Minecraft.Client/Common/XUI/: XUI_Leaderboards.cpp
Minecraft.Client/DurangoMedia/: strings.h
Minecraft.Client/DurangoMedia/loc/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/cs-CZ/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/da-DK/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/de-DE/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/el-GR/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/en-GB/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/es-ES/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/es-MX/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/fi-FI/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/fr-FR/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/it-IT/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/ja-JP/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/ko-KR/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/nb-NO/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/nl-NL/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/pl-PL/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/pt-BR/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/pt-PT/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/ru-RU/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/sk-SK/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/sv-SE/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/zh-CHS/: stringsGeneric.xml
Minecraft.Client/DurangoMedia/loc/zh-CHT/: stringsGeneric.xml
Minecraft.Client/Windows64/: KeyboardMouseInput.cpp  StaticInitGuard.cpp  Windows64_GameStoragePaths.h  Windows64_Minecraft.cpp  Windows64_UIController.cpp  Windows64_Xuid.h
Minecraft.Client/Windows64/4JLibs/libs/: 4J_Input.lib  4J_Storage.lib
Minecraft.Client/Windows64/CloudSync/: Win64CloudSync.cpp  Win64CloudSync.h
Minecraft.Client/Windows64/Leaderboards/: PlayFabConfig.h  WindowsLeaderboardManager.cpp  WindowsLeaderboardManager.h
Minecraft.Client/Windows64/Network/: PlayFabLobbyWin64.cpp  PlayFabLobbyWin64.h  PlayFabPartyTransport.cpp  PlayFabPartyTransport.h  UpnpIgdUwp.cpp  UpnpIgdUwp.h  WinsockNetLayer.cpp  WinsockNetLayer.h
Minecraft.Client/Windows64Media/: strings.h
Minecraft.Client/Windows64Media/loc/: stringsGeneric.xml
Minecraft.Client/Windows64Media/loc/de-DE/: strings.lang  stringsGeneric.xml
Minecraft.Client/Windows64Media/loc/es-ES/: strings.lang  stringsGeneric.xml
Minecraft.Client/Windows64Media/loc/fr-FR/: strings.lang  stringsGeneric.xml
Minecraft.Client/Windows64Media/loc/it-IT/: strings.lang  stringsGeneric.xml
Minecraft.Client/Windows64Media/loc/ja-JP/: strings.lang  stringsGeneric.xml
Minecraft.Client/Windows64Media/loc/ko-KR/: strings.lang  stringsGeneric.xml
Minecraft.Client/Windows64Media/loc/pt-BR/: strings.lang  stringsGeneric.xml
Minecraft.Client/Windows64Media/loc/zh-CHT/: strings.lang  stringsGeneric.xml
Minecraft.Client/cmake/sources/: Common.cmake  Windows.cmake
Minecraft.Server/: ServerLogManager.cpp  ServerProperties.cpp  ServerProperties.h
Minecraft.World/: AddPlayerPacket.cpp  AddPlayerPacket.h  ArmorStand.cpp  AuthModule.cpp  AuthModule.h  AuthPackets.cpp  AuthPackets.h  BeetrootTile.cpp  BeetrootTile.h  Biome.cpp  C4JThread.cpp  CMakeLists.txt  Chicken.cpp  Connection.cpp  ConsoleSaveFileOriginal.cpp  DaylightDetectorTile.cpp  DirectoryLevelStorage.cpp  DirectoryLevelStorage.h  DirtTile.cpp  DirtTile.h  DisconnectPacket.h  DoorItem.cpp  DoorTile.cpp  DyePowderItem.cpp  FarmTile.cpp  FenceGateTile.cpp  FenceTile.cpp  File.cpp  File.h  FileInputStream.cpp  FileOutputStream.cpp  FireTile.cpp  FishFoodItem.cpp  FishFoodItem.h  FurnaceRecipes.cpp  GrassTile.cpp  HandshakeManager.cpp  HandshakeManager.h  HttpClient.cpp  HttpClient.h  (+40 more)
UWP/: Package.appxmanifest  UWP_App.cpp  UWP_App.h  XboxGamepadInput.h  builduwp.bat  generate_placeholder_logos.bat  stdafx_uwp.h  stdafx_uwp_post.h  stdafx_uwp_pre.h
cmake/: UwpBuild.cmake  UwpFixVcxprojSigning.ps1  UwpReadPfxThumbprint.ps1  UwpVcxprojSigning.cmake
docs/: app.js  cloud-page.js  cloud.html  friends-page.js  friends.html  home.js  index.html  oauth-callback.html  shared.js  styles.css
scripts/: cloudsave-token-relay.example.js  (+7 more)
(+12 files in other folders)
